--- a/yaml/hello_arc.yaml
+++ b/yaml/hello_arc.yaml
@@ -17,7 +17,7 @@ metadata:
   name: hello-arc
   namespace: hello-arc
 spec:
-  replicas: 3
+  replicas: 4
   selector:
     matchLabels:
       app: hello-arc
@@ -33,4 +33,4 @@ spec:
         - containerPort: 8080
         env:
         - name: MESSAGE
-          value: This is me running azure arc
+          value: This is me running azure arc.
